# datcaotram.github.io

./: Cargo.toml  README.md  index.html  intro-1beaf679d48962fa.css  portfolio-2bf00e8438915204.js  portfolio-2bf00e8438915204_bg.wasm  portfolio-44d36cb5b06c7051.js  portfolio-44d36cb5b06c7051_bg.wasm  portfolio-5737550825f3ad1f.js  portfolio-5737550825f3ad1f_bg.wasm  portfolio-cce31e4033429d4c.js  portfolio-cce31e4033429d4c_bg.wasm  portfolio-e224460581b1176a_bg.wasm
.github/workflows/: deploy.yml
src/: app.rs  main.rs  sections.rs
src/components/: project_card.rs
src/sections/: footer.rs  intro.rs  showcase.rs
static/styles/: footer.css  general.css  header.css  showcase.css
