[package]
authors = ["Dat Tram <dat_tram@outlook.com>"]
description = "A portfolio"
name = "portfolio"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/DatCaoTram/personal-website"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"

